--- a/package.json
+++ b/package.json
@@ -5,19 +5,28 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^3.1.2"
+    "socket.io": "^3.1.2",
+    "if-env": "^1.0.4"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "concurrently": "^4.1.0"
+  },
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "seed": "node scripts/seedDB.js",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/BrandonVA/socket-chat-app.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Brandon VanAllen",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/BrandonVA/socket-chat-app/issues"
   },
