--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "server.js",
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^3.1.2",
-    "if-env": "^1.0.4"
+    "if-env": "^1.0.4",
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^3.1.2"
   },
   "devDependencies": {
     "concurrently": "^4.1.0"
